--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "sencha-workspace/extjs"]
 	path = sencha-workspace/extjs
 	url = https://github.com/JarvusInnovations/extjs.git
+[submodule "slate-theme"]
+	path = sencha-workspace/packages/slate-theme
+	url = https://github.com/SlateFoundation/slate-theme.git
+	branch = ext/6
