--- a/sencha-workspace/packages/slate-cbl-baxter/package.json
+++ b/sencha-workspace/packages/slate-cbl-baxter/package.json
@@ -242,6 +242,8 @@
          *          }
          *      }
          */
-        "requires": []
+        "requires": [
+            "slate-cbl"
+        ]
     }
 }
