--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,7 @@
 	path = sencha-workspace/packages/slate-theme
 	url = https://github.com/SlateFoundation/slate-theme.git
 	branch = ext/6
+[submodule "slate-cbl-colors"]
+	path = sencha-workspace/packages/slate-cbl-colors
+	url = https://github.com/SlateFoundation/slate-cbl-colors.git
+	branch = master
