--- a/sencha-workspace/packages/slate-cbl-baxter/package.json
+++ b/sencha-workspace/packages/slate-cbl-baxter/package.json
@@ -243,7 +243,7 @@
          *      }
          */
         "requires": [
-            "slate-cbl"
+            "slate-cbl-colors"
         ]
     }
 }
