refactor: move build config to package.json

--- a/sencha-workspace/packages/slate-cbl-baxter/package.json
+++ b/sencha-workspace/packages/slate-cbl-baxter/package.json
@@ -87,7 +87,16 @@
         /**
          * Controls the output directory.
          */
-        "output": "${package.dir}/build",
+         "output": {
+            "base": "${package.dir}/build",
+            "js": {
+                "version": "ES6"
+            }
+        },
+
+        "compressor": {
+            "polyfills": "none"
+        },
 
         /**
          * Indicates whether this is a locally developed package or downloaded form a repository.
