wip: sync latest changes

--- a/.holo/branches/emergence-site/_slate-cbl.toml
+++ b/.holo/branches/emergence-site/_slate-cbl.toml
@@ -1,6 +1,14 @@
 [holomapping]
 files = [
     "**",
-    "!php-config/Git.config.d/"
+    "!php-config/Git.config.d/",
+    # exclude the submodules we're using temporarily to support local dev
+    # -- they would overwrite the trees coming in the right way through projection
+
+    "!sencha-workspace/ext",
+    "!sencha-workspace/packages.remote/",
+    "!sencha-workspace/.sencha/",
+    "!sencha-workspace/workspace.json",
+    "sencha-workspace/plan.abstract.sh"
 ]
-before = "*"
+after = [ "skeleton-v2" ]
