--- a/.studiorc
+++ b/.studiorc
@@ -1,4 +1,3 @@
 #!/bin/bash
-hab pkg install emergence/studio chakijs/studio
+hab pkg install emergence/studio
 source "$(hab pkg path emergence/studio)/studio.sh"
-source "$(hab pkg path chakijs/studio)/studio.sh"
