refactor: project local code on top of slate-cbl=>emergence-skeleton

--- a/.holo/branches/emergence-site/_slate-cbl.toml
+++ b/.holo/branches/emergence-site/_slate-cbl.toml
@@ -1,14 +1,3 @@
 [holomapping]
-files = [
-    "**",
-    "!php-config/Git.config.d/",
-    # exclude the submodules we're using temporarily to support local dev
-    # -- they would overwrite the trees coming in the right way through projection
-
-    "!sencha-workspace/ext",
-    "!sencha-workspace/packages.remote/",
-    "!sencha-workspace/.sencha/",
-    "!sencha-workspace/workspace.json",
-    "sencha-workspace/plan.abstract.sh"
-]
-after = [ "skeleton-v2" ]
+files = "**"
+before = "*"
