fix: remove file filters

--- a/.holo/branches/emergence-site/_slate-cbl-baxter.toml
+++ b/.holo/branches/emergence-site/_slate-cbl-baxter.toml
@@ -1,9 +1,3 @@
 [holomapping]
-files = [
-    "*/**",
-
-    # ignore all Baxter's frontend customizations for now, they'll need to be upgraded
-    "!php-config/Emergence/WebApps/SenchaApp.config.d/**",
-    "!sencha-workspace/**"
-]
+files = "*/**"
 after = "*"
